<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">My Todos</string>
    <string name="sign_in">Sign-In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="do_you_forget_your_password">Do you forget your password?</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign-Up</string>
    <string name="your_e_mail">Your E-mail</string>
    <string name="re_password">Re-Password</string>
    <string name="register">Register</string>
    <string name="default_web_client_id" translatable="false">94325085185-ce0messabcg0d9rt1k6tto2kt24o8qq3.apps.googleusercontent.com</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="log_out">Log Out</string>
    <string name="update_note">Update Note:</string>
    <string name="my">My</string>
    <string name="notes">Todos</string>
    <string name="plain_your_life">Plan Your Life</string>
    <string name="my_notes">My Todos</string>
    <string name="no_notes">No Todos</string>
    <string name="search_notes">Search todos</string>
    <string name="search_note">Search todos...</string>
    <string name="languages">Languages</string>
    <string name="country">Country</string>
    <string name="symbol">Symbol</string>
    <string name="choose_language">Choose Language</string>
    <string name="please_fill_the_details" translatable="false">Please Fill the Details</string>
    <string name="failed_to_login_because_you_are_not_registered" tools:ignore="MissingTranslation">Failed to Login Because you are not registered: %1$s</string>
    <string name="login_successfully" translatable="false">Login Successfully</string>
    <string name="ok" translatable="false">OK</string>
    <string name="login_failed" translatable="false">Login Failed: %1$s</string>
    <string name="failed" translatable="false">Failed</string>
    <string name="users" translatable="false">users</string>
    <string name="notess" translatable="false">notes</string>
    <string name="failed_to_load_notes" translatable="false">Failed to load todo.</string>
    <string name="confirm_deletion" translatable="false">Confirm Deletion</string>
    <string name="do_you_want_to_delete_this_note" translatable="false">Do you want to delete this todo?</string>
    <string name="delete" translatable="false">Delete</string>
    <string name="note_deleted_successfully" translatable="false">Todo Deleted Successfully</string>
    <string name="failed_to_delete_note" translatable="false">Failed to delete note.</string>
    <string name="note_does_not_exist" translatable="false">Note does not exist.</string>
    <string name="failed_to_fetch_note_details" translatable="false">Failed to fetch todo details.</string>
    <string name="update_notes" translatable="false">Update todo</string>
    <string name="update" translatable="false">Update</string>
    <string name="note_addition_failed" translatable="false">Todo Addition Failed</string>
    <string name="note_added_successfully" translatable="false">Todo Added Successfully</string>
    <string name="fill_all_fields" translatable="false">Fill all fields</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="create" translatable="false">Create</string>
    <string name="create_notes" translatable="false">Create Todo</string>
    <string name="note_update_failed" translatable="false">Todo Update Failed</string>
    <string name="note_update_successfully" translatable="false">Todo Updated Successfully</string>
    <string name="share_via" translatable="false">Share Via</string>
    <string name="share_content" translatable="false">Todo ID: %1$s\nTitle: %2$s\nDescription: %3$s</string>
    <string name="no" translatable="false">No</string>
    <string name="some_fields_is_empty_please_fill_it" translatable="false">Some fields is Empty Please fill it!</string>
    <string name="both_password_must_be_same" translatable="false">Both Password must be Same</string>
    <string name="register_successfully" translatable="false">Register Successfully</string>
    <string name="registration_failed" translatable="false">Registration Failed : %1$s</string>
    <string name="do_you_want_to_logout" translatable="false">Do you want to logout?</string>
    <string name="yes" translatable="false">Yes</string>

</resources>
